[package]
name = "libui"
version = "0.3.0"
authors = ["Jakob K <jjk@outlook.at>"]
description = "A native, cross-platform and lightweight UI toolkit."

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/libui/"
repository = "https://github.com/libui-rs/libui"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "../README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["windows", "gtk", "gui", "user_interface", "macos"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["gui", "os::macos-apis", "os::unix-apis", "os::windows-apis"]
license = "MIT"

[dependencies]
bitflags = "1"
libc = "0.2"
libui-ffi = { path = "../libui-ffi", version = "0.3.0" }
