[package]
name = "libui_bindings"
version = "0.1.0"
authors = ["Jakob K <jjk@outlook.at>"]
license = "MIT"
description = "Easy to build low-level bindings to 'libui-ng'"

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/ui-sys/"
repository = "https://github.com/rust-native-ui/libui-rs"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["windows", "gtk", "gui", "user_interface", "macos"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["gui", "os::macos-apis", "os::unix-apis", "os::windows-apis"]

links = "ui"
build = "build.rs"

maintenance = { status = "actively-developed" }

[lib]
name="ui_sys"

[features]
default = ["fetch", "build"]

fetch = []
build = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
embed-resource = "1.3"
pkg-config = "0.3"
